--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head></head>
+<link href="style.css" rel="stylesheet">
 <body>
 <h1>This is officially my first webpage</h1>
 <p>Every journey starts with a small step!</p>
