--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
-<head></head>
+<head>
 <link href="style.css" rel="stylesheet">
+</head>
 <body>
 <h1>This is officially my first webpage</h1>
 <p>Every journey starts with a small step!</p>
