--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<link href="style.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
 </head>
+
 <body>
-<h1>This is officially my first webpage</h1>
-<p>Every journey starts with a small step!</p>
+    <h1>This is officially my first webpage</h1>
+    <p>Every journey starts with a small step!</p>
+    <p class="mncm"> <a href="www.mncmconsulting.com">This</a> is a link to my company.</p>p>
 </body>
+
 </html>
