--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>This is officially my first webpage</h1>
     <p>Every journey starts with a small step!</p>
-    <p class="mncm"> <a href="www.mncmconsulting.com">This</a> is a link to my company.</p>p>
+    <p class="mncm"> <a href="http://www.mncmconsulting.com">This</a> is a link to my company.</p>
 </body>
 
 </html>
