--- a/index.html
+++ b/index.html
@@ -2,13 +2,38 @@
 <html>
 
 <head>
+    <title>The Sport of Triathlon</title>
     <link href="style.css" rel="stylesheet">
 </head>
+<header>Triathlon as an Endurance Sport</header>
 
 <body>
-    <h1>This is officially my first webpage</h1>
-    <p>Every journey starts with a small step!</p>
-    <p class="mncm"> <a href="http://www.mncmconsulting.com">This</a> is a link to my company.</p>
+    <div class="intro">
+        <p>Triathlon is a sport that combines three distinct disciplines.</p>
+    </div>
+
+    <div class="boxes">
+
+        <div class="box">
+            <h1>Swim</h1>
+            <p>Starting dicipline. You cannot win a race with just being a good swimmer, but you can certainly lose one if you are not good enough.</p>
+            <img class="img" src="images/swim.jpg" alt="an open water swimmer">
+        </div>
+
+        <div class="box">
+            <h1>Bike</h1>
+            <p>Being fast on the bike depends on not only your power but your skills as well.</p>
+            <img class="img" src="images/bike.jpg" alt="cycling on aerobars">
+        </div>
+
+        <div class="box">
+            <h1>Run</h1>
+            <p>Most toll on the body and mind, running after a bike effort is different than just running.</p>
+            <img class="img" src="images/run.jpg" alt="a trail runner">
+        </div>
+    </div>
 </body>
+
+<footer>2020 (c) MNCM Consulting</footer>
 
 </html>
