--- a/index.html
+++ b/index.html
@@ -16,21 +16,35 @@
 
         <div class="box">
             <h1>Swim</h1>
-            <p>Starting dicipline. You cannot win a race with just being a good swimmer, but you can certainly lose one if you are not good enough.</p>
-            <img class="img" src="/images/swim.jpg" alt="an open water swimmer">
+            <div class="boxtext">
+                <p>Starting dicipline. You cannot win a race with just being a good swimmer, but you can certainly lose one if you are not good enough.</p>
+            </div>
+            <img class="img" src="images/swim.jpg" alt="an open water swimmer">
         </div>
 
         <div class="box">
             <h1>Bike</h1>
-            <p>Being fast on the bike depends on not only your power but your skills as well.</p>
-            <img class="img" src="/images/bike.jpg" alt="cycling on aerobars">
+            <div class="boxtext">
+                <p>Being fast on the bike depends on not only your power but your skills as well.</p>
+            </div>
+            <img class="img" src="images/bike.jpg" alt="cycling on aerobars">
         </div>
 
         <div class="box">
             <h1>Run</h1>
-            <p>Most toll on the body and mind, running after a bike effort is different than just running.</p>
-            <img class="img" src="/images/run.jpg" alt="a trail runner">
+            <div class="boxtext">
+                <p>Most toll on the body and mind, running after a bike effort is different than just running.</p>
+            </div>
+            <img class="img" src="images/run.jpg" alt="a trail runner">
+
         </div>
+    </div>
+    <div class="forms">
+        <form action="mail">
+            <label for="comment">Send me your comments:</label>
+            <textarea cols="50" rows="3" placeholder="Input comments here"></textarea>
+            <button type="Submit">Send</button>
+        </form>
     </div>
 </body>
 
