--- a/index.html
+++ b/index.html
@@ -48,6 +48,6 @@
     </div>
 </body>
 
-<footer>2020 (c) MNCM Consulting</footer>
+<footer><a href="http://www.mncmconsulting.com">2020 (c) MNCM Consulting</a></footer>
 
 </html>
