--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
     </div>
     <div class="forms">
-        <form action="mail">
+        <form action="MAILTO:m.kerem.topuz@gmail.com" method="post" enctype="text/plain">
             <label for="comment">Send me your comments:</label>
             <textarea cols="50" rows="3" placeholder="Input comments here"></textarea>
             <button type="Submit">Send</button>
