--- a/robot/robot.html
+++ b/robot/robot.html
@@ -2,7 +2,6 @@
 <html>
 
 <head>
-    <script src="robot.pack.js"></script>
     <link href="robot-style.css" rel="stylesheet">
 </head>
 
@@ -18,6 +17,7 @@
         <div class="bottom"></div>
         <div class="rightleg"></div>
     </div>
+    <script src="robot.js"></script>
 </body>
 
 </html>
