--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </div>
     <div class="projects">
         <h1>Here are some of my projects:</h1>
-        <p><a href="robot/robot.html">Try to catch the robot!</a>
+        <p><a href="robot/robot.html">Try to catch the penguin!</a>
     </div>
 </body>
 
