--- a/index.html
+++ b/index.html
@@ -2,56 +2,92 @@
 <html>
 
 <head>
-    <title>The Sport of Triathlon</title>
+    <title>Mustafa Kerem Topuz</title>
     <link href="style.css" rel="stylesheet">
 </head>
-<header>Triathlon as an Endurance Sport</header>
+<header>I am a 41 year old management consultant from Istanbul, Turkey.</header>
 
 <body>
-    <div class="intro">
-        <p>Triathlon is a sport that combines three distinct disciplines.</p>
-    </div>
-
-    <div class="boxes">
-
-        <div class="box">
-            <h1>Swim</h1>
-            <div class="boxtext">
-                <p>Starting dicipline. You cannot win a race with just being a good swimmer, but you can certainly lose one if you are not good enough.</p>
+    <div class="flip-box-container">
+        <div class="flip-box">
+            <div class="flip-box-inner">
+                <div class="flip-box-front">
+                    <h2>I have my own consulting firm.</h2>
+                </div>
+                <div class="flip-box-back">
+                    <h2>
+                        <a href="http://www.mncmconsulting.com" alt="my company website">
+                            <img class="logo" src="logos/mncm-logo.PNG" alt="my company logo">
+                        </a>
+                    </h2>
+                </div>
             </div>
-            <img class="img" src="images/swim.jpg" alt="an open water swimmer">
         </div>
-
-        <div class="box">
-            <h1>Bike</h1>
-            <div class="boxtext">
-                <p>Being fast on the bike depends on not only your power but your skills as well.</p>
+        <div class="flip-box">
+            <div class="flip-box-inner">
+                <div class="flip-box-front">
+                    <h2>I am an Ironman distance triathlete.</h2>
+                </div>
+                <div class="flip-box-back">
+                    <h2>
+                        <a href="https://www.ironman.com/" alt="official website of ironman races">
+                            <img class="logo" src="logos/ironman-logo.PNG" alt="official ironman logo">
+                        </a>
+                    </h2>
+                </div>
             </div>
-            <img class="img" src="images/bike.jpg" alt="cycling on aerobars">
         </div>
-
-        <div class="box">
-            <h1>Run</h1>
-            <div class="boxtext">
-                <p>Most toll on the body and mind, running after a bike effort is different than just running.</p>
+        <div class="flip-box">
+            <div class="flip-box-inner">
+                <div class="flip-box-front">
+                    <h2>I have a history of rock climbing and high altitude mountaineering.</h2>
+                </div>
+                <div class="flip-box-back">
+                    <h2>
+                        <a href="https://www.ordos.org.tr/" alt="my mountaineering club website">
+                            <img class="logo" src="logos/ordos-logo.PNG" alt="my mountaineering club logo">
+                        </a>
+                    </h2>
+                </div>
             </div>
-            <img class="img" src="images/run.jpg" alt="a trail runner">
-
+        </div>
+        <div class="flip-box">
+            <div class="flip-box-inner">
+                <div class="flip-box-front">
+                    <h2>I was one of the editors of the one and only climbing magazine in Turkey. </br>(now discontinued)</h2>
+                </div>
+                <div class="flip-box-back">
+                    <h2>
+                        <a href="https://takoz.org/" alt="takoz magazine website">
+                            <img class="logo" src="logos/takoz-logo.PNG" alt="takoz magazine logo">
+                        </a>
+                    </h2>
+                </div>
+            </div>
+        </div>
+        <div class="flip-box">
+            <div class="flip-box-inner">
+                <div class="flip-box-front">
+                    <h2>I am teaching myself front-end development. </br>(click for projects)</h2>
+                </div>
+                <div class="flip-box-back">
+                    <h2>
+                        <a href="projects.html" alt="my portfolio of coding">
+                            <img class="logo" src="logos/code-logo.PNG" alt="html, css, and js">
+                        </a>
+                    </h2>
+                </div>
+            </div>
         </div>
     </div>
     <div class="forms">
         <form action="MAILTO:m.kerem.topuz@gmail.com" method="post" enctype="multipart/form-data">
-            <label for="comment">Send me your comments:</label>
-            <textarea required cols="50" rows="3" placeholder="Input comments here"></textarea>
-            <input type="Submit"></input>
+            <button for="email">Send me and email</button>
         </form>
     </div>
-    <div class="projects">
-        <h1>Here are some of my projects:</h1>
-        <p><a href="penguin/penguin.html">Try to catch the penguin!</a>
-    </div>
+
 </body>
 
-<footer><a href="http://www.mncmconsulting.com">2020 (c) MNCM Consulting</a></footer>
+<footer>2020 (c) MNCM Consulting</footer>
 
 </html>
