--- a/index.html
+++ b/index.html
@@ -82,7 +82,13 @@
     </div>
     <div class="forms">
         <form action="MAILTO:m.kerem.topuz@gmail.com" method="post" enctype="multipart/form-data">
-            <button for="email">Send me and email</button>
+            <button for="email">Send me an email</button></br>
+            <a href="https://twitter.com/Keereeeem" alt="follow me on twitter">
+                <img class="sociallogo" src="logos/twitter-logo.PNG" alt="follow me on twitter">
+            </a>
+            <a href="https://www.linkedin.com/in/keremtopuz/" alt="connect with me on linkedin">
+                <img class="sociallogo" src="logos/linkedin-logo.PNG" alt="connect with me on linkedin">
+            </a>
         </form>
     </div>
 
