--- a/projects.html
+++ b/projects.html
@@ -9,7 +9,10 @@
 <body>
     <h1><a href="penguin/penguin.html" rel="evasive penguin"> Try to catch the penguin. :)</a>
         <h1>
-
+            <p>
+                <a href="index.html" rel="back to home">
+                    <<</a>
+            </p>
 </body>
 
 </html>
