revamp v4 with publications

--- a/index.html
+++ b/index.html
@@ -79,6 +79,20 @@
                 </div>
             </div>
         </div>
+        <div class="flip-box">
+            <div class="flip-box-inner">
+                <div class="flip-box-front">
+                    <h2>I have some energy related publications.</h2>
+                </div>
+                <div class="flip-box-back">
+                    <h2>
+                        <a href="publications.html" alt="my portfolio of coding">
+                            <img class="logo" src="logos/pub-logo.PNG" alt="html, css, and js">
+                        </a>
+                    </h2>
+                </div>
+            </div>
+        </div>
     </div>
     <div class="forms">
         <form action="MAILTO:m.kerem.topuz@gmail.com" method="post" enctype="multipart/form-data">
