--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Mustafa Kerem Topuz</title>
     <link href="style.css" rel="stylesheet">
 </head>
+
 <header>I am a 41 year old management consultant from Istanbul, Turkey.</header>
 
 <body>
@@ -68,7 +69,7 @@
         <div class="flip-box">
             <div class="flip-box-inner">
                 <div class="flip-box-front">
-                    <h2>I am teaching myself front-end development. </br>(click for projects)</h2>
+                    <h2>I am teaching myself front-end development.</br>(click for projects)</h2>
                 </div>
                 <div class="flip-box-back">
                     <h2>
@@ -82,7 +83,7 @@
         <div class="flip-box">
             <div class="flip-box-inner">
                 <div class="flip-box-front">
-                    <h2>I have some energy related publications.</h2>
+                    <h2>I have some energy related publications.</br>(click for PDFs)</h2>
                 </div>
                 <div class="flip-box-back">
                     <h2>
