--- a/projects.html
+++ b/projects.html
@@ -7,12 +7,14 @@
 </head>
 
 <body>
-    <h1><a href="penguin/penguin.html" rel="evasive penguin"> Try to catch the penguin. :)</a>
+    <h1><a href="penguin/penguin.html" rel="evasive penguin">Try to catch the penguin. :)</a>
         <h1>
-            <p>
-                <a href="index.html" rel="back to home">
-                    <<</a>
-            </p>
+            <h1><a href="storygame/story.html" rel="create a random story">Create a story from random words.</a>
+                <h1>
+                    <p>
+                        <a href="index.html" rel="back to home">
+                            <<</a>
+                    </p>
 </body>
 
 </html>
