--- a/projects.html
+++ b/projects.html
@@ -12,9 +12,7 @@
             <h1><a href="storygame/story.html" rel="create a random story">Create a story from random words.</a>
                 <h1>
                     <p>
-                        <a href="index.html" rel="back to home">
-                            <<</a>
-                    </p>
+                        <a href="index.html" rel="back to home" << </a></p>
 </body>
 
 </html>
