--- a/penguin/penguin.html
+++ b/penguin/penguin.html
@@ -8,7 +8,7 @@
 
 <body>
     <p>
-        <a href="../index.html" rel="go back to projects">
+        <a href="../projects.html" rel="go back to projects">
             <<</a>
                 <p>
                     <div class="penguin">
