--- a/storygame/story.html
+++ b/storygame/story.html
@@ -8,7 +8,7 @@
 
 <body>
     <p>
-        <a href="../index.html" rel="go back to projects">
+        <a href="../projects.html" rel="go back to projects">
             <<</a>
                 <p>
                     <h1>Try to make up a one sentence story by placing words to the front or back of each other, with as fewest skips and removals as possible.</h1>
