--- a/projects.html
+++ b/projects.html
@@ -11,10 +11,12 @@
         <h1>
             <h1><a href="storygame/story.html" rel="create a random story">Create a story from random words.</a>
                 <h1>
-                    <p>
-                        <a href="index.html" rel="back to home">
-                            << </a>
-                    </p>
+                    <h1><a href="notepad/notepad.html" rel="a notepad with pages">A notepad with page functionality.</a>
+                        <h1>
+                            <p>
+                                <a href="index.html" rel="back to home">
+                                    << </a>
+                            </p>
 </body>
 
 </html>
